--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
@@ -1,5 +1,6 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 
+<br />
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
   <span>ค้นหาการติดตามผลการตรวจสอบของหน่วยรับตรวจ</span>
 </div>
@@ -140,6 +141,8 @@
       </tr>
     </thead>
   </table>
+  <label style="font-size: 13px;"><b>หมายเหตุ:</b> ทำเครื่องหมายถูก <i class="check square outline icon"></i> ที่หน้ารายการ และกดปุ่ม "ลบ" หมายถึงต้องการลบรายการที่เลือก</label>
+  <br />
   <br />
   <div class="ui center aligned grid">
     <div class="sixteen wide column">
