--- a/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="three wide field"><label class="text-right full-width">เลขประจำตัวผู้เสียภาษีอากร</label></div>
             <div class="three wide field">
-              <input type="text" formControlName="userNumber" name="userNumber" id="userNumber">
+              <input type="text" formControlName="userNumber" name="userNumber" id="userNumber" class="custom-readonly" disabled>
             </div>
           </div>
 
