--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -15,14 +15,14 @@
           <div class="ten wide field">
           </div>
           <div class="six wide field">
-            <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
+            <label class="text-right full-width">เลขที่วิเคราะห์ข้อมูล</label>
             <input value="" readonly="" class="custom-readonly" />
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="three wide required field">
-            <label>ระยะเวลาที่ตรวจสอบ</label>
+          <div class="four wide required field">
+            <label class="text-right full-width">ระยะเวลาที่ตรวจสอบ</label>
           </div>
           <div class="three wide field ui calendar" id="calendar">
             <div class="ui input left icon">
@@ -32,8 +32,8 @@
             </div>
           </div>
           <div class="one wide field"></div>
-          <div class="two wide field">
-            <label>ถึง</label>
+          <div class="one wide field">
+            <label class="text-right full-width">ถึง</label>
           </div>
           <div class="three wide field ui calendar" id="calendar1">
             <div class="ui input left icon">
@@ -48,8 +48,8 @@
         </div>
 
         <div class="inline fields">
-          <div class="three wide required field">
-            <label> สถานะผู้ประกอบ</label>
+          <div class="four wide  field">
+            <label class="text-right full-width"> สถานะผู้ประกอบ</label>
           </div>
           <div class="three wide field ui ">
             <div class="ui selection dropdown full-width">
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="one wide field"></div>
-          <div class="two wide field">
+          <div class="one wide field">
 
           </div>
           <div class="three wide field ui calendar" id="calendar1">
@@ -73,7 +73,8 @@
           <div class="one wide field">
           </div>
         </div>
-
+        <br>
+        <br>
         <div class="ui center aligned grid">
           <div class="eight wide column">
             <button type="submit" class="ui mini primary button">
@@ -89,7 +90,7 @@
               ล้างข้อมูล
             </button>
           </div>
-        </div>
+        </div><br>
       </div>
     </div>
   </div>
