--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -151,24 +151,21 @@
                         <label>คำค้นหา</label>
                     </div>
                     &nbsp;&nbsp;&nbsp;
-                    <div class="five wide field ">
+                    <div class="four wide field ">
                         <input type="text" [(ngModel)]="formSearch" name="formSearch" id="formSearch">
                     </div>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <div class="two wide field ">
+                    <div class="three wide field ">
                         <button class="ui mini primary button" (click)="search()">
-                            ค้นหา
+                            <i class="search icon"></i>ค้นหา
                         </button>
-                        <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <input type="hidden" id="exciseId" value="EX" />
-                            <button id="exciseBtn" class="ui mini primary button" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value+'&num=25610615-01-00330';">
-                                <i class="add icon"></i>
-                                เพิ่มข้อมูล
-                            </button> -->
+                        <button class="ui mini primary button" (click)="searchAll()">
+                            <i class="search icon"></i>ค้นหาทั้งหมด
+                        </button>
                     </div>
                     <div class="two wide field ">
                         <button class="ui mini primary button" id="conditonModal">
-                            เพิ่มเงื่อนไข
+                            <i class="plus icon"></i>เพิ่มเงื่อนไข
                         </button>
                     </div>
                     <div class="five wide field">
