--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.css
@@ -1,3 +1,14 @@
 tr td:nth-child(3), td:nth-child(4) {
     text-align: left;
  }
+ .transition-left {
+    /* position: fixed;
+    left: -270px; */
+    display: none
+}
+.custom-menu{
+    border-top-left-radius: 0rem;
+    border-top-right-radius: 0.285714rem;
+    border-bottom-right-radius: 0.285714rem;
+    border-bottom-left-radius: 0rem;
+}
