--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -77,7 +77,9 @@
 
         <div class="ui segment">
             <div class="ui grid">
-                <div class="three wide column" style="padding-bottom: 0"></div>
+                <div class="three wide column" style="padding-bottom: 0">
+                    
+                </div>
                 <div class="six wide column" style="padding-bottom: 0">
                     <button class="ui mini primary button">
                         <i class="list icon"></i>
@@ -91,20 +93,25 @@
                 <div class="seven wide column" style="padding-bottom: 0">
                     <div class="ui form">
                         <div class="inline fields">
-                            <div class="sixteen wide field">
+                            <div class="thirteen wide field">
                                 <label style="width: 5em;">พิกัด</label>
                                 <select class="ui dropdown ai" name="coordinates" id="coordinates" (change)="changeCoordinates()">
                                     <option value="">ทั้งหมด</option>
                                     <option *ngFor="let list of coordinatesArr">{{list.value1}}</option>
                                 </select>
                             </div>
+                            <div class="three wide field">
+                                <button type="button" class="ui mini button"><i class="sync icon" (click)="searchAll()"></i>ข้อมูลทั้ง</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <div class="ui grid">
+                <button  (click)="toggleBar()" class="ui button custom-menu" type="button"><i class="bars icon"></i>เมนู</button>
+            </div><br>
             <div class="ui grid" style="margin-top: 0">
-                <div class="three wide column" style="padding-right: 0;">
+                <div style="padding-right: 0;" [ngClass]="{'three wide column': !toggle, 'transition-left' : toggle}">
                     <div class="ui vertical menu" style="width: auto">
                         <div class="item">
                             <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
@@ -126,7 +133,7 @@
 
                     </div>
                 </div>
-                <div class="thirteen wide column" style="padding-top: 0">
+                <div style="padding-top: 0" [ngClass]="{'thirteen': !toggle, 'sixteen': toggle,'wide': true, 'column': true, 'transition-left-2': toggle}">
                     <div>
                         <table id="userManagementDt" class="ui small celled table aligned hover striped selectable nowrap" style="width: 100%">
                             <thead id="trDrinamic">
