--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -191,6 +191,8 @@
                         routerLinkActive="active ">ส่งกระดาษทำการคัดเลือกราย </a>
                     <a class="item " [routerLink]="[ '/add-external-data/receive-line-user'] " *ngIf="authService.renderByPage('/add-external-data/receive-line-user')"
                         routerLinkActive="active ">รับกระดาษทำการคัดเลือกราย </a>
+                    <a class="item " [routerLink]="[ '/add-external-data/approve-line-user'] " *ngIf="authService.renderByPage('/add-external-data/approve-line-user')"
+                        routerLinkActive="active ">รายการที่เลือก </a>
 
                 </div>
             </div>
