--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -166,10 +166,10 @@
                     <br>
                     <div class="ui center aligned grid">
                         <div class="sixteen wide column">
-                            <button class="ui mini primary button">
+                            <!-- <button class="ui mini primary button">
                                 <i class="print icon"></i>
                                 พิมพ์กระดาษทำการคัดเลือกราย
-                            </button>
+                            </button> -->
                             <button class="ui mini primary button" (click)="updateFlg()">
                                 <i class="save icon"></i>
                                 บันทึกข้อมูล
